delete some words

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/I.jpg" alt="" /></a>
-					<h1><strong>I am Evan</strong>, a gamer<br />
+					<h1><strong>I am Evan</strong><br />
 					Welcome to my secret garden<br />
 					Just have fun<br />
 					BTW, please never <a href="http://www.acfun.cn/">click here</a></h1>
